# cloud-dev-box

./: .gitignore  README.md  init-env.sh  pyproject.toml  shell.sh
aws/docker/docker-arch-test/: Dockerfile
aws/docker/front_end_bootstrap/: Dockerfile
aws/docker/front_end_docker/: Dockerfile
aws/pulumi/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  config-values.md
aws/pulumi/pulumi_util/: __init__.py  util.py
config/: default-config.toml
deployed/projects/be-bucket-492598163938-us-west-2/: .gitignore  Pulumi.global.yaml  Pulumi.yaml  README.md  __main__.py  config.global.yaml  config.yaml  pulumi  pulumi.sh
deployed/projects/be-bucket-492598163938-us-west-2/state/.pulumi/backups/global/: global.1646674696659984674.json  global.1646674758416714748.json  global.1646674758416714748.json.attrs
deployed/projects/be-bucket-492598163938-us-west-2/state/.pulumi/history/global/: global-1646674696659517215.checkpoint.json.attrs  global-1646674696659517215.history.json  global-1646674758416399623.history.json  (+6 more)
deployed/projects/be-bucket-492598163938-us-west-2/state/.pulumi/stacks/: global.json.bak  global.json.bak.attrs
src/pulumi/: __main__.py
src/python/: config.py  dirhash.py  install_pulumi.py  pulumi_config.py  pulumi_wrap.py  typehints.py
src/python/pulumi_util/: __init__.py  utilities.py  xvpc.py
tools/: bash-helpers.sh  get-current-ec2-instance-identity.sh  grp-run  install-docker.sh  install-poetry.sh  install-prerequisites.sh  install-pulumi.py  test-docker-buildx.sh
traefik/demo/: docker-compose.yml
trash/: __main__.bak.py  project_secret.py
